federation-2/router-bridge/src/snapshots/router_bridge__planner__error_display__defer_with_fragment.snap
---
source: router-bridge/src/planner.rs
assertion_line: 1908
expression: "serde_json::to_string_pretty(&plan_response).unwrap()"
---
{
  "queryPlan": {
    "kind": "QueryPlan",
    "node": {
      "kind": "Defer",
      "primary": {
        "subselection": "{ computer(id: \"Computer1\") { id } }",
        "node": {
          "kind": "Fetch",
          "serviceName": "computers",
          "variableUsages": [],
          "operation": "{computer(id:\"Computer1\"){errorField id}}",
          "operationKind": "query"
        }
      },
      "deferred": [
        {
          "depends": [],
          "queryPath": [
            "computer"
          ],
          "subselection": "{ ... on Computer { errorField } }"
        }
      ]
    }
  },
  "formattedQueryPlan": "QueryPlan {\n  Defer {\n    Primary {\n      {\n        computer(id: \"Computer1\") {\n          id\n        }\n      }:\n      Fetch(service: \"computers\") {\n        {\n          computer(id: \"Computer1\") {\n            errorField\n            id\n          }\n        }\n      }\n    }, [\n      Deferred(depends: [], path: \"computer\") {\n        {\n          ... on Computer {\n            errorField\n          }\n        }:\n      },\n    ]\n  },\n}"
}
